# KraisEngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build_mingw.bat  build_vs2019.bat  cmake_install.cmake  install_manifest.txt  ke_cmake_functions.cmake  spdlog.pc
Krais/src/: Krais.h
Krais/src/Krais/: CApplication.cpp  CApplication.h  Core.h  EntryPoint.h
KraisEngine/: CMakeLists.txt  LOG.MD  cmake_install.cmake
KraisEngine/src/: KraisEngine.h  ke_api_defines.h  ke_pch.cpp  ke_pch.h
KraisEngine/src/KraisEngine/: EntryPoint.h
KraisEngine/src/KraisEngine/Core/: CApplication.cpp  CApplication.h  CAsset.cpp  CAsset.h  CAssetsManager.cpp  CAssetsManager.h  CAudioManager.cpp  CAudioManager.h  CCameraController.cpp  CCameraController.h  CGraphics.cpp  CGraphics.h  CGraphicsManager.cpp  CGraphicsManager.h  CInputManager.cpp  CInputManager.h  CLagger.cpp  CLagger.h  CLayer.cpp  CLayer.h  CLayerStack.cpp  CLayerStack.h  CShaderAssetsManager.cpp  CShaderAssetsManager.h  CTexture2D.h  CThrottler.cpp  CThrottler.h  CWindow.h  Core.h  KeyCodes.h  Log.cpp  Log.h  MouseCodes.h
KraisEngine/src/KraisEngine/Events/: CEvent.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
KraisEngine/src/KraisEngine/ImGuiBuild/: KEImGuiBuild.cpp
KraisEngine/src/KraisEngine/Platform/Windows/: CWindow_WinImpl.cpp  CWindow_WinImpl.h
KraisEngine/src/KraisEngine/Render/: Buffers.h  CCamera.cpp  CCamera.h  CGraphicsContext.cpp  CGraphicsContext.h  CRenderAPI.cpp  CRenderAPI.h  CRenderObject.cpp  CRenderObject.h  CShader.cpp  CShader.h  CTexture2D.cpp  CTexture2D.h
KraisEngine/src/KraisEngine/Render/Buffers/: CArrayBuffer.h  CBufferLayout.h  CIndexBuffer.h  CVertexBuffer.h  IBindableBuffer.h
KraisEngine/src/KraisEngine/Structs/: DynArray.h  GridChunk2D.h  LinkedList.h
KraisEngine/src/Platform/Factories/: CPlatformFactory.h
KraisEngine/src/Platform/OpenGL/: Buffers_OpenGL.h  CArrayBuffer_OpenGL.h  CIndexBuffer_OpenGL.h  COpenGLArrayBuffer.cpp  COpenGLArrayBuffer.h  COpenGLContext.cpp  COpenGLContext.h  COpenGLIndexBuffer.cpp  COpenGLIndexBuffer.h  COpenGLShader.cpp  COpenGLShader.h  COpenGLTexture2D.cpp  COpenGLTexture2D.h  COpenGLVertexBuffer.cpp  COpenGLVertexBuffer.h  CVertexBuffer_OpenGL.h
KraisEngine/src/Platform/Windows/: CWindow_WinImpl.cpp  CWindow_WinImpl.h
Sandbox/: CMakeLists.txt  TODO.txt  cmake_install.cmake  imgui.ini
Sandbox/Assets/Shaders/: default.frag  light.frag  light.vert  shader1.frag  shader1.vert  shader2.frag
Sandbox/src/: CImguiLayer.cpp  CImguiLayer.h  CSandbox.cpp  CSandbox.h  Sandbox.cpp
Sandbox/src/Layers/: CImguiLayer.cpp  CImguiLayer.h  CTestAudioLayer.cpp  CTestAudioLayer.h  CTestOpenGLLayer.cpp  CTestOpenGLLayer.h
Tests/: TestGrid.cpp  Tests.cpp  pch.h
enc_temp_folder/53791f5fbe827fcbef52ecdc87c0837b/: CApplication.cpp
